Fixed color contrast issues.

--- a/framework/sass/_base.scss
+++ b/framework/sass/_base.scss
@@ -4,7 +4,7 @@
 
 // Colours
 //---------------
-$llc-pink:              #8b31e0;
+$llc-pink:              #9638ef;
 $black:                 #000;
 $gray-dark:             #222;
 $gray:                  #444;
